--- a/waiterbot_suite/waiterbot_bringup/package.xml
+++ b/waiterbot_suite/waiterbot_bringup/package.xml
@@ -11,13 +11,5 @@
   <!-- <url type="website">http://wiki.ros.org/waiterbot_bringup</url> -->
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>adc_driver</build_depend>
-  <build_depend>arduino_interface</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <run_depend>adc_driver</run_depend>
-  <run_depend>arduino_interface</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-
+  <run_depend>waiterbot_sensors</run_depend>
 </package>
