--- a/waiterbot_suite/waiterbot_sensors/package.xml
+++ b/waiterbot_suite/waiterbot_sensors/package.xml
@@ -4,11 +4,11 @@
   <version>0.0.0</version>
   <description>The waiterbot_sensors package</description>
   <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <author email="jorge@yujinrobot.com">Jorge Santos Simon</author> 
 
   <license>BSD</license>
 
-  <!-- <url type="website">http://wiki.ros.org/waiterbot_sensors</url> -->
+  <url type="website">http://wiki.ros.org/waiterbot_sensors</url> 
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>adc_driver</build_depend>
