--- a/waiterbot_suite/waiterbot_bringup/package.xml
+++ b/waiterbot_suite/waiterbot_bringup/package.xml
@@ -11,5 +11,7 @@
   <!-- <url type="website">http://wiki.ros.org/waiterbot_bringup</url> -->
 
   <buildtool_depend>catkin</buildtool_depend>
+  <run_depend>joint_state_publisher</run_depend>
+  <run_depend>robot_state_publisher</run_depend>
   <run_depend>waiterbot_sensors</run_depend>
 </package>
