--- a/waiterbot_suite/waiterbot_ctrl_nowireless/param/move_base/global_costmap_params.yaml
+++ b/waiterbot_suite/waiterbot_ctrl_nowireless/param/move_base/global_costmap_params.yaml
@@ -1,5 +1,5 @@
 global_costmap:
-   global_frame: /ar_link
+   global_frame: /odom
    robot_base_frame: /base_footprint
    update_frequency: 1.0
    publish_frequency: 0.5
