--- a/waiterbot_suite/waiterbot_ctrl_nowireless/param/common.yaml
+++ b/waiterbot_suite/waiterbot_ctrl_nowireless/param/common.yaml
@@ -1,4 +1,4 @@
 # commonly shared configurations among nodes
-global_frame: odom
+global_frame: ar_global
 odom_frame  : odom
 base_frame  : base_footprint
