--- a/waiterbot_suite/waiterbot_ctrl_nowireless/package.xml
+++ b/waiterbot_suite/waiterbot_ctrl_nowireless/package.xml
@@ -16,6 +16,7 @@
 
 
   <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>waiterbot_bringup</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>waiterbot_msgs</build_depend>
@@ -23,11 +24,16 @@
   <build_depend>yocs_msgs</build_depend>
   <build_depend>yocs_math_toolkit</build_depend>
   <build_depend>tf</build_depend>
-  <run_depend>waiterbot_bringup</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>waiterbot_msgs</run_depend>
+
+  <run_depend>dynamic_reconfigure</run_depend>
+  <run_depend>geometry_msgs</run_depend>
   <run_depend>kobuki_msgs</run_depend>
+  <run_depend>roscpp</run_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>waiterbot_bringup</run_depend>
+  <run_depend>waiterbot_msgs</run_depend>
   <run_depend>yocs_msgs</run_depend>
   <run_depend>yocs_math_toolkit</run_depend>
-  <run_depend>tf</run_depend>
+
 </package>
