--- a/waiterbot_suite/waiterbot_ar_pair_tracking/.cproject
+++ b/waiterbot_suite/waiterbot_ar_pair_tracking/.cproject
@@ -38,18 +38,28 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
+					<sourceEntries>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="include/waiterbot_ar_pair_tracking"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
+					</sourceEntries>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
 		</cconfiguration>
-	</storageModule>
-	<storageModule moduleId="scannerConfiguration">
-		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
 		<project id="waiterbot_ar_pair_tracking.null.1727223431" name="waiterbot_ar_pair_tracking"/>
 	</storageModule>
 	<storageModule moduleId="refreshScope" versionNumber="1">
 		<resource resourceType="PROJECT" workspacePath="/waiterbot_ar_pair_tracking"/>
+	</storageModule>
+	<storageModule moduleId="scannerConfiguration">
+		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.base.1429173573;cdt.managedbuild.toolchain.gnu.base.1429173573.523836276;cdt.managedbuild.tool.gnu.cpp.compiler.base.1627791877;cdt.managedbuild.tool.gnu.cpp.compiler.input.1481154426">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileCPP"/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.base.1429173573;cdt.managedbuild.toolchain.gnu.base.1429173573.523836276;cdt.managedbuild.tool.gnu.c.compiler.base.585178745;cdt.managedbuild.tool.gnu.c.compiler.input.1406144933">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileC"/>
+		</scannerConfigBuildInfo>
 	</storageModule>
 </cproject>
