--- a/waiterbot_suite/waiterbot_ar_pair_approach/package.xml
+++ b/waiterbot_suite/waiterbot_ar_pair_approach/package.xml
@@ -1,12 +1,12 @@
 <package>
-  <name>waiterbot_ar_pair_search_behaviour</name>
+  <name>waiterbot_ar_pair_approach</name>
   <version>0.0.0</version>
   <description>
-    Search behaviour for when the waiterbot hasn't yet detected the approach marker pair.
+    Search and approach behaviour, moving to a target in front of a pair of ar markers.
   </description>
   <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
   <license>BSD</license>
-  <url type="website">http://ros.org/wiki/Roles and role management for human interactive agents in the concert.</url>
+  <url type="website">http://ros.org/wiki/waiterbot_ar_pair_approach</url>
   <url type="repository">https://github.com/yujinrobot/kobuki-x</url>
   <url type="bugtracker">https://github.com/yujinrobot/kobuki-x/issues</url>
   <author email="d.stonier@gmail.com">Daniel Stonier</author>
@@ -15,5 +15,5 @@
 
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>tf_listener</run_depend>
+  <run_depend>tf</run_depend>
 </package>
