--- a/waiterbot_suite/waiterbot_ar_pair_approach/package.xml
+++ b/waiterbot_suite/waiterbot_ar_pair_approach/package.xml
@@ -16,4 +16,5 @@
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>dynamic_reconfigure</run_depend>
 </package>
