--- a/waiterbot_suite/waiterbot_ctrl_cafe/CMakeLists.txt
+++ b/waiterbot_suite/waiterbot_ctrl_cafe/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(waiterbot_controller)
+project(waiterbot_ctrl_cafe)
 
 ## Find catkin macros and libraries
 find_package(catkin REQUIRED tf roscpp actionlib actionlib_msgs sensor_msgs move_base_msgs kobuki_msgs cafe_msgs yocs_msgs
@@ -14,7 +14,7 @@ find_package(Boost REQUIRED COMPONENTS system)
 ###################################
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES waiterbot_controller
+  LIBRARIES waiterbot_ctrl_cafe
   CATKIN_DEPENDS tf roscpp actionlib actionlib_msgs sensor_msgs move_base_msgs kobuki_msgs cafe_msgs yocs_msgs
                  ar_track_alvar yocs_math_toolkit
   DEPENDS Boost
@@ -27,7 +27,7 @@ catkin_package(
 ## Specify additional locations of header files
 include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
-add_executable(waiterbot_controller_node src/waiter_node.cpp
+add_executable(waiterbot_ctrl_cafe_node src/waiter_node.cpp
                                         src/waiter_tasks.cpp
                                         src/waiter_delivery_handles.cpp
                                         src/waiter_callbacks.cpp
@@ -38,10 +38,10 @@ add_executable(waiterbot_controller_node src/waiter_node.cpp
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-add_dependencies(waiterbot_controller_node kobuki_msgs cafe_msgs_gencpp yocs_msgs_gencpp ar_track_alvar_gencpp)
+add_dependencies(waiterbot_ctrl_cafe_node kobuki_msgs cafe_msgs_gencpp yocs_msgs_gencpp ar_track_alvar_gencpp)
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(waiterbot_controller_node ${catkin_LIBRARIES})
+target_link_libraries(waiterbot_ctrl_cafe_node ${catkin_LIBRARIES})
 
 #############
 ## Install ##
