--- a/waiterbot_suite/waiterbot_ctrl_cafe/package.xml
+++ b/waiterbot_suite/waiterbot_ctrl_cafe/package.xml
@@ -18,6 +18,7 @@
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>ar_track_alvar</build_depend>
+  <build_depend>waiterbot_ar_marker_tracking</build_depend>
   <build_depend>cafe_msgs</build_depend>
   <build_depend>move_base_msgs</build_depend>
   <build_depend>waiterbot_bringup</build_depend>
@@ -31,6 +32,7 @@
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>ar_track_alvar</run_depend>
+  <run_depend>waiterbot_ar_marker_tracking</run_depend>
   <run_depend>cafe_msgs</run_depend>
   <run_depend>move_base_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
